<resources>
    <string name="app_name">Flashcard Software Application</string>
    <string name="title">Title</string>
    <string name="latest_update">latest update:</string>
    <string name="notes">Notes</string>
    <string name="delete_button">delete button</string>
    <string name="flashcard">FlashCard</string>
    <string name="add_button">add button</string>
    <string name="flashcards">Flashcards</string>
    <string name="empty_list">You don\'t have any flashcard available, click tha fab button to add one</string>
</resources>