<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:padding="5dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/flashcard_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="319dp"
            android:hint="@string/title"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:ellipsize="marquee"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/flashcard_lastupdate"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest_update"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:singleLine="true"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/flashcard_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:textSize="14sp"
            android:hint="@string/notes"
            android:textColor="@color/white"
            android:maxLines="2"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/flashcard_delete"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:padding="10dp"
        android:background="@drawable/baseline_delete_outline_24"
        android:contentDescription="@string/delete_button"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>