<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/purple"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SaveFlashcard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flashcard"
                    android:textSize="35sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <EditText
                android:id="@+id/flashcardEdit_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:hint="@string/title"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:inputType="textCapSentences|textMultiLine"
                android:singleLine="false"
                android:layout_marginTop="20dp"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/flashcardEdit_Notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Notes"
                android:textColor="@color/white"
                android:singleLine="false"
                android:inputType="textCapSentences|textMultiLine"

                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:padding="5dp"/>
        </LinearLayout>


    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_flashcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/baseline_check_24"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>